samples/_failures_safe/1761493891_f68f0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08aa1115.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_08aa1115.c:183:5: error: expected expression at end of input
  183 |     free(
      |     ^~~~
./samples/SAFE/__tmp_08aa1115.c:183:5: error: expected declaration or statement at end of input
